# roomba_stack

./: .gitignore  README.md  Roomba_691_OI_Cheat_Sheet  pyproject.toml
apps/: cli.py  cli0.py  dev_shell.py  gateway.py  voice_post.py
config/: voice_allowlist.yaml
src/roomba_stack/l0_core/: __init__.py  bus.py  events.py
src/roomba_stack/l1_drivers/: pyserial_port.py  serial_port.py
src/roomba_stack/l2_oi/: oi_codec.py  oi_decode.py  oi_protocol.py  oi_service.py  protocol_queue.py
src/roomba_stack/l3_domain/: state_store.py
src/roomba_stack/l3_domain/bridges/: voice_http_bridge.py
src/roomba_stack/l3_domain/tts/: adapter.py  print_adapter.py
src/roomba_stack/l3_domain/voice/: auth_policy.py  config.py  intent_router.py
tests/: test_oi_codec_leds_song.py  test_protocol_queue.py
