[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "roomba_stack"
version = "0.1.0"
description = "Layered software stack for iRobot Roomba control (Ubuntu dev, deploy to Raspberry Pi)"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Genady" }]
dependencies = [
  "pyserial>=3.5",
  "construct>=2.10.68",  # for OI protocol parsing
]

[tool.setuptools.packages.find]
where = ["src"]
